# prenotaula

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BookingFormModal.tsx  CalendarView.css  CalendarView.tsx  HomePage.tsx  Navbar.tsx  NotFoundPage.tsx  RegistrationPage.tsx  SideNavigationMenu.tsx  loginpage.tsx
frontend/src/components/utils/: orariScolastici.tsx
src/: auth_utils.rs  main.rs  models.rs
